--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
           </div>
         </div>        
         <div class="row g-3">
-          <p class="question">To prepare a suitable treatment plan and quote for you, we require <a href="./smiles.jpeg">some images of varying angles and positions</a> of the teeth and bite. <br> This will allow for a full visual assessment from the dental team.</p> 
+          <p class="question">To prepare a suitable treatment plan and quote for you, we require <a href="./smiles.jpeg" target="_blank">some images of varying angles and positions</a> of the teeth and bite. <br> This will allow for a full visual assessment from the dental team.</p> 
           <div class="col-md-3">
             <div class="mb-1">
               <label for="formFile" class="form-label"
